--- a/views/editor/editorSetup.ejs
+++ b/views/editor/editorSetup.ejs
@@ -26,6 +26,7 @@
     
     <script src="/js/jquery.validate.js"></script>
     <script src="/js/additional-methods.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
     <script src="/js/cryptojslib/rollups/aes.js"></script>
     <script src="/js/cryptojslib/rollups/pbkdf2.js"></script>
     
