--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,21 +1,29 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
       <a class="navbar-brand" href="#">syncpad server</a>
     </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="/">Home</a></li>
-      <li><a href="/profile">My Profile</a></li>
-      <li><a href="/editor">Editor (TESTING)</a></li>
-      
-      <% if (user.role == 'admin') { %>
-      <li><a href="/users">User List</a></li>
-      <li><a href="/clients">Client List</a></li>
-      <% } %>
-      
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
+    
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="/">Home</a></li>
+        <li><a href="/profile">My Profile</a></li>
+        <li><a href="/editor"><span class="glyphicon glyphicon-plus"></span>Editor (Alpha)</a></li>
+
+        <% if (user.role == 'admin') { %>
+          <li><a href="/users">User List</a></li>
+          <li><a href="/clients">Client List</a></li>
+          <% } %>
+
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
         <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Log Out</a></li>
-    </ul>
+      </ul>
+    </div>
   </div>
 </nav>
